--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -339,13 +339,13 @@
 
         <TextView
             android:id="@+id/score"
+            android:hint="очки"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="5dp"
-            android:text="Очков: 0"
             android:textColor="@color/cardview_light_background"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView7"
@@ -426,13 +426,13 @@
 
         <TextView
             android:id="@+id/lvlview"
+            android:hint="уровень"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="150dp"
             android:layout_marginBottom="150dp"
             android:gravity="center"
-            android:text="Уровень 0"
             android:textColor="@color/cardview_light_background"
             android:textColorHighlight="@color/cardview_light_background"
             android:textColorHint="@color/cardview_light_background"
