--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorSpeed">#B9E7FF</color>
 
+    <color name="black">#000000</color>
+
 
 </resources>
